fixed typed.js front page bug; made font more readable on contact page

--- a/app/assets/stylesheets/experiences.scss
+++ b/app/assets/stylesheets/experiences.scss
@@ -70,5 +70,9 @@
   display: inline-block;
   text-align: left;
   padding-left: 7px;
-  color: #868d5e;
+  color: #99A265;
+}
+
+.contact a{
+  text-decoration: none;
 }
