--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -96,7 +96,7 @@ body{
   margin-top: 10%;
   color: white;
   opacity: 0.8;
-  width: 60%;
+  margin-right: 40%;
   padding-left:30px;
 }
 
